LPS-77699 Update translations

--- a/modules/apps/foundation/portal-security/portal-security-ldap-api/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/foundation/portal-security/portal-security-ldap-api/src/main/resources/content/Language_ja.properties
@@ -1,81 +1,81 @@
-authentication-search-filter=Authentication Search Filter (Automatic Copy)
+authentication-search-filter=認証検索フィルター
 authentication-search-filter-help=ユーザーを検証するために使う検索フィルタを入力してください。@company_id@, @email_address@, @screen_name@と@user_id@ は実行時に正しい値に置換されます。
 autogenerate-user-password=ユーザーパスワードを自動生成する
-base-dn=Base DN (Automatic Copy)
+base-dn=ベースDN
 base-dn-help=Base DNはユーザーの初期サーチコンテクストになります。これは任意項目です。
-base-provider-url=Base Provider URL (Automatic Copy)
-company-id=Company ID (Automatic Copy)
-connection-properties=Connection Properties (Automatic Copy)
-contact-custom-mappings=Contact Custom Mappings (Automatic Copy)
+base-provider-url=ベースプロバイダー URL
+company-id=Company ID
+connection-properties=接続プロパティ
+contact-custom-mappings=連絡先のカスタム マッピング
 contact-custom-mappings-help=インポート/エクスポートの際、LDAPのユーザー属性と、ポータルコンタクトのカスタム属性に接続するのに、ポートレットはこのマッピングを利用します。
-contact-mappings=Contact Mappings (Automatic Copy)
+contact-mappings=連絡先のマッピング
 contact-mappings-help=インポート/エクスポートの際、LDAPのユーザー属性と、ポータル連絡先属性に接続するのに、ポートレットはこのマッピングを利用します。
 create-role-per-group=グループ毎にロールを作成する
-default-user-password=Default User Password (Automatic Copy)
+default-user-password=デフォルトのユーザーパスワード
 enable-group-cache=グループキャッシュを有効にする
-enable-import=Enable Import (Automatic Copy)
-enable-import-on-startup=Enable Import on Startup (Automatic Copy)
+enable-import=インポートを有効にします。
+enable-import-on-startup=起動時にインポートを有効にします。
 enable-user-password=ユーザーパスワードを有効にする
-enabled=Enabled (Automatic Copy)
-error-password-age-keywords=Error Password Age Keywords (Automatic Copy)
-error-password-expired-keywords=Error Password Expired Keywords (Automatic Copy)
-error-password-history-keywords=Error Password History Keywords (Automatic Copy)
-error-password-not-changeable-keywords=Error Password Not Changeable Keywords (Automatic Copy)
-error-password-syntax-keywords=Error Password Syntax Keywords (Automatic Copy)
-error-password-trivial-text-keywords=Error Password Trivial Text Keywords (Automatic Copy)
-error-user-lockout-keywords=Error User Lockout Keywords (Automatic Copy)
-export-enabled=Export Enabled (Automatic Copy)
+enabled=有効
+error-password-age-keywords=エラー: パスワード有効期間キーワード
+error-password-expired-keywords=エラー: パスワード期限切れのキーワード
+error-password-history-keywords=エラー: パスワード履歴キーワード
+error-password-not-changeable-keywords=エラー: パスワード変更不可のキーワード
+error-password-syntax-keywords=エラー: パスワード構文キーワード
+error-password-trivial-text-keywords=エラー: 推測が容易なパスワードのキーワード
+error-user-lockout-keywords=エラー: ユーザー ロックアウト キーワード
+export-enabled=エクスポートは有効です。
 export-enabled-help=ポータルからLDAPにユーザーをエクスポートする設定です。ユーザーは姓名などを変更することができます。ポータルでの変更をLDAPサーバーにプッシュします。この設定はLDAPAuthConfiguration.enabledがtrueに設定されている場合のみ有効になります。
-export-group-enabled=Export Group Enabled (Automatic Copy)
+export-group-enabled=グループのエクスポートは有効です
 export-group-enabled-help=これがtrueの場合、グループとそれに関連する情報がポータルからLDAPにエクスポートされます。この設定はLDAPAuthConfiguration.enabledがtrueに設定されている場合のみ有効になります。
-factory-initial=Factory Initial (Automatic Copy)
-group-default-object-classes=Group Default Object Classes (Automatic Copy)
+factory-initial=工場出荷時の初期設定
+group-default-object-classes=グループ標準オブジェクトクラス
 group-default-object-classes-help=グループがLDAPにエクスポートされる際に、グループが存在しない場合、以下のデフォルトオブジェクトクラスに従ってグループが生成されます。
-group-mappings=Group Mappings (Automatic Copy)
+group-mappings=グループマッピング
 group-mappings-help=グループをインポートする際、ポータルはLDAPグループ属性と、ポータルのユーザーグループ属性を結びつけるのに、このマッピングを利用します。
-group-search-filter=Group Search Filter (Automatic Copy)
-group-search-filter-enabled=Group Search Filter Enabled (Automatic Copy)
+group-search-filter=グループ検索フィルター
+group-search-filter-enabled=グループ検索フィルターは有効です
 group-search-filter-help=これがtrueの場合、特定のbase DNのグループのみ、グループフィルターが適用されます。falseの場合、フィルターは適用されず、インポートされたユーザーに結びついているすべてのグループは、base DNにかかわらずインポートされます。
-groups-dn=Groups DN (Automatic Copy)
+groups-dn=Groups DN
 groups-dn-help=特定のDNに対して新規グループが生成されます。これらの設定はLDAPAuthConfiguration.enabledとLDAPExportConfiguration.enabledがtrueに設定されている時のみ有効です。
 import-create-role-per-group-help=これがtrueの場合、ポータルは自動的にLDAPからインポートしたグループ毎にロールを作成します。ロールはグループに割り当てられ、グループにユーザーが割り当てられた際に、ユーザーは自動的にそのロールを継承します。
 import-group-cache-enabled-help=whethertimeを特定します。グループDN検索はLDAPインポートとログインの際にキャッシュされます。これがtrueの場合、LDAPインポートとログインの時間を短縮しますが、グループ属性の更新は、キャッシュが期限切れになるまで反映されません。キャッシュに設定されているキャッシュサイズとタイムアウトはcom.liferay.portal.security.exportimport.UserImporterというキャッシュ名を使用します
-import-interval=Import Interval (Automatic Copy)
+import-interval=インポートの間隔
 import-lock-expiration-time-help=LDAPインポートのロック期限切れ時間を設定します。デフォルトでは1日です。
 import-method=インポートメソッド
 import-method-help=ユーザーはグループのインポート方法を設定します。ユーザーに設定されている場合、ポータルは全ユーザーと、ユーザーが属しているグループを全てインポートします。グループに設定されている場合、ポータルは全グループと、グループに属するユーザーを全てインポートします。この値はLDAPサーバーが、どのようにグループ情報を保持しているか、に合わせて設定してください。
-import-user-sync-strategy=Import User Synchronization Strategy (Automatic Copy)
-ldap-auth-configuration-name=LDAP Auth
-ldap-export-configuration-name=LDAP Export
-ldap-import-configuration-name=LDAP Import
+import-user-sync-strategy=ユーザー同期方法のインポート
+ldap-auth-configuration-name=LDAP 認証
+ldap-export-configuration-name=LDAP エクスポート
+ldap-import-configuration-name=LDAP インポート
 ldap-server-configuration-name=LDAPサーバ
-ldap-server-id=LDAP Server ID (Automatic Copy)
+ldap-server-id=LDAPサーバID
 lock-expiration-time=ロック有効期限
-method=Method (Automatic Copy)
+method=方式
 method-help=LDAPの認証メソッドにバインドするか、パスワード比較を設定するかを設定します。暗号化などに悩まされる必要がないので、ほとんどのLDAPサーバーに対してはバインドが推奨されます。
-page-size=Page Size (Automatic Copy)
+page-size=ページサイズ
 page-size-help=ページングをサポートするディレクトリサーバーの場合、ページサイズを設定してください。Microsoft Active Directoryサーバーの場合、この値は1000からそれ以下に程度になります。
-password-encryption-algorithm=Password Encryption Algorithm (Automatic Copy)
+password-encryption-algorithm=パスワード暗号化アルゴリズム
 password-encryption-algorithm-help=インポートの時にパスワードを比較する時と、エクスポートの時に暗号化するのに利用するパスワード暗号化を設定してください。LDAPAuthConfiguration.methodにパスワード比較(password-compare)が設定されている時のみ、インポートの時にパスワード比較が有効になります。ただし、SHA-512はサポートされません。暗号化がデフォルトの無し(NONE)に設定されていた場合、パスワードは平文になります。
-password-policy-enabled=Password Policy Enabled (Automatic Copy)
-password-policy-enabled-help=Set this to true to use LDAP's password policy instead of the portal password policy. If set to true, it is possible that portal generated passwords will not match the LDAP policy. See the "passwords.regexptoolkit.*" properties for details on configuring RegExpToolkit in generating these passwords. Note that if this is enabled, the portal will not check for valid passwords, expired passwords, or users that are locked out. This is now handled by the LDAP server's password policy. (Automatic Copy)
-range-size=Range Size (Automatic Copy)
+password-policy-enabled=パスワード ポリシーが有効です
+password-policy-enabled-help=ポータルのパスワード ポリシーの代わりに、パスワード ポリシーを LDAP を使用する場合は true に設定します。True の場合、ポータルで自動生成されたパスワードが LDAP ポリシーと一致しない場合があります。これらのパスワードを生成する RegExpToolkit の構成の詳細については、「passwords.regexptoolkit.*」プロパティを参照してください。これが有効な場合、ポータルは有効なパスワードや、期限切れのパスワード、ロックアウトされたユーザーを確認しませんので注意してください。現在の状態は、LDAP サーバーのパスワード ポリシーによって処理されています。
+range-size=範囲サイズ
 range-size-help=範囲データ取得をサポートする、ディレクトリサーバーの複数値属性に関して、クエリ毎に返却する値の数を設定します。
-referral=Referral (Automatic Copy)
-required=Required (Automatic Copy)
-security-credential=Security Credential (Automatic Copy)
-security-principal=Security Principal (Automatic Copy)
-server-name=Server Name (Automatic Copy)
+referral=リファラル
+required=必須
+security-credential=セキュリティ・クレデンシャル
+security-principal=セキュリティ プリンシパル
+server-name=サーバー名
 system-ldap-configuration-name=システムLDAP
-user-custom-mappings=User Custom Mappings (Automatic Copy)
+user-custom-mappings=ユーザー カスタム マッピング
 user-custom-mappings-help=ユーザーをインポート/エクスポートする時、ポータルはLDAPユーザー属性とポータルユーザーのカスタム属性をマッピングする際に、この設定を利用します。
-user-default-object-classes=User Default Object Classes (Automatic Copy)
+user-default-object-classes=ユーザー標準オブジェクトクラス
 user-default-object-classes-help=ユーザーをLDAPにエクスポートした際、ユーザーが存在しない場合、以下のデフォルトオブジェクトクラスでユーザーが作成されます。
-user-ignore-attributes=User Ignore Attributes (Automatic Copy)
+user-ignore-attributes=ユーザーが無視する属性
 user-ignore-attributes-help=ポータルから制御するユーザー属性を設定します。LDAPからユーザーを追加もしくは変更した場合、これらの属性の同期はスキップされます。
-user-mappings=User Mappings (Automatic Copy)
+user-mappings=ユーザー マッピング
 user-mappings-help=ユーザーをインポート/エクスポートする時、ポータルはLDAPユーザー属性とポータルユーザー属性をマッピングする際に、この設定を利用します。
-user-search-filter=User Search Filter (Automatic Copy)
+user-search-filter=ユーザー検索フィルター
 user-search-filter-help=LDAPからポータルにユーザーをインポートする設定になります。これらの設定はLDAPImportConfiguration.enabledがtrueに設定されている時に有効となります。
-users-dn=Users DN (Automatic Copy)
+users-dn=User DN
 users-dn-help=新規ユーザーは特定のDNに作成されます。これはLDAPAuthConfiguration.enabled とLDAPExportConfiguration.enabledがtrueの時にのみ有効です。
