--- a/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/content/Language_ja.properties
@@ -1,40 +1,40 @@
 all-ambiguous-data-was-forgotten=All ambiguous data was forgotten. (Automatic Copy)
-all-data-was-anonymized=All data was anonymized. (Automatic Copy)
-anonymize-data=Anonymize Data (Automatic Copy)
-application-data-review=Application Data Review (Automatic Copy)
-are-you-sure-you-want-to-anonymize-all-associated-entities=Are you sure you want to anonymize all associated entities? (Automatic Copy)
-are-you-sure-you-want-to-anonymize-the-users-personal-data=Are you sure you want to anonymize the user's personal data? (Automatic Copy)
-are-you-sure-you-want-to-anonymize-this-entity=Are you sure you want to anonymize this entity? (Automatic Copy)
-are-you-sure-you-want-to-deactivate-the-user=Are you sure you want to deactivate the user? (Automatic Copy)
-are-you-sure-you-want-to-delete-all-associated-entities=Are you sure you want to delete all associated entities? (Automatic Copy)
-are-you-sure-you-want-to-delete-the-user=Are you sure you want to delete the user? (Automatic Copy)
-are-you-sure-you-want-to-delete-this-entity=Are you sure you want to delete this entity? (Automatic Copy)
-are-you-sure-you-want-to-forget-the-users-personal-site=Are you sure you want to forget the user's personal site? (Automatic Copy)
-auto-anonymize=Auto Anonymize (Automatic Copy)
-auto-anonymize-all=Auto Anonymize All (Automatic Copy)
-deactivate-user=Deactivate User (Automatic Copy)
-delete-all=Delete All (Automatic Copy)
-delete-personal-site=Delete Personal Site (Automatic Copy)
-delete-user=Delete User (Automatic Copy)
-edit-url=Edit URL (Automatic Copy)
-entity-id=Entity ID (Automatic Copy)
-erase-personal-data=Erase Personal Data (Automatic Copy)
-forget-user-data=Forget User Data (Automatic Copy)
-no-data-requires-anonymization=No data requires anonymization. (Automatic Copy)
-no-entities-remain-of-this-type=No entities remain of this type. (Automatic Copy)
-nonanonymizable-fields=Nonanonymizable Fields (Automatic Copy)
-open-dashboard-pages=Open Dashboard Pages (Automatic Copy)
-open-profile-pages=Open Profile Pages (Automatic Copy)
-personal-data-erasure=Personal Data Erasure (Automatic Copy)
+all-data-was-anonymized=すべてのデータは匿名化されました
+anonymize-data=データを匿名化
+application-data-review=アプリケーション データのレビュー
+are-you-sure-you-want-to-anonymize-all-associated-entities=すべての関連するエンティティを匿名化してよいですか？
+are-you-sure-you-want-to-anonymize-the-users-personal-data=ユーザーの個人データを匿名化してよいですか？
+are-you-sure-you-want-to-anonymize-this-entity=このエンティティを匿名化してよいですか？
+are-you-sure-you-want-to-deactivate-the-user=このユーザを無効化してよいですか？
+are-you-sure-you-want-to-delete-all-associated-entities=すべての関連するエンティティを削除してよいですか？
+are-you-sure-you-want-to-delete-the-user=このユーザーを削除してもよろしいですか?
+are-you-sure-you-want-to-delete-this-entity=このエンティティを削除してもよろしいですか?
+are-you-sure-you-want-to-forget-the-users-personal-site=ユーザーの個人データを無視してよいですか？
+auto-anonymize=自動匿名化
+auto-anonymize-all=全てを自動匿名化
+deactivate-user=ユーザーを無効化
+delete-all=全てを削除
+delete-personal-site=個人用サイトを削除
+delete-user=ユーザを削除
+edit-url=URLを編集
+entity-id=エンティティ ID
+erase-personal-data=個人データを削除
+forget-user-data=ユーザー情報を無視する
+no-data-requires-anonymization=匿名化が必要なデータはありません
+no-entities-remain-of-this-type=この種類のエンティティはありません
+nonanonymizable-fields=匿名化しないフィールド
+open-dashboard-pages=ダッシュボードページを開く
+open-profile-pages=プロファイルページを開く
+personal-data-erasure=個人データ抹消
 personal-site-was-successfully-forgotten=Personal site was successfully forgotten. (Automatic Copy)
-summary-page-step-five-description=Delete the user to complete the data erasure process. (Automatic Copy)
-summary-page-step-five-title=Step 5: Delete User (Automatic Copy)
-summary-page-step-four-description=Anonymize application data that can be dealt with automatically. (Automatic Copy)
-summary-page-step-four-title=Step 4: Anonymize Simple Application Data (Automatic Copy)
-summary-page-step-one-description=The user must be deactivated before starting the data erasure process. (Automatic Copy)
-summary-page-step-one-title=Step 1: Deactivate User (Automatic Copy)
-summary-page-step-three-description=Review application data that may be considered personal data. This data cannot be automatically anonymized and must be reviewd by an admin. (Automatic Copy)
-summary-page-step-three-title=Step 3: Review Complex Application Data (Automatic Copy)
-summary-page-step-two-description=All data on the users's personal site will be deleted. Review and save data you want to keep on the user's profile and dashboard pages. (Automatic Copy)
-summary-page-step-two-title=Step 2: Delete Personal Site (Automatic Copy)
-user-was-successfully-deactivated=User was successfully deactivated. (Automatic Copy)
+summary-page-step-five-description=データ抹消プロセスを完了するために、ユーザーを削除しました
+summary-page-step-five-title=ステップ5: ユーザー削除
+summary-page-step-four-description=自動的に処理できるように、アプリケーションデータを匿名化する。
+summary-page-step-four-title=ステップ 4: 単純なアプリケーションデータを匿名化する
+summary-page-step-one-description=データ抹消プロセスを開始するのに、ユーザーは無効化される必要があります。
+summary-page-step-one-title=ステップ1: ユーザー無効化
+summary-page-step-three-description=個人データと見なされる可能性があるアプリケーション データを確認します。このデータは、自動的に匿名化することはできません、管理者が確認する必要があります。
+summary-page-step-three-title=ステップ 3: 複雑なアプリケーションデータを確認します。
+summary-page-step-two-description=ユーザー個人用サイト上、全てのデータが削除されます。ユーザーのプロファイルとダッシュ ボード ページに残しておきたいデータを保存してください。
+summary-page-step-two-title=ステップ 2: 個人用サイトを削除します。
+user-was-successfully-deactivated=ユーザーが無効に設定されました。
