--- a/modules/apps/portal-search-elasticsearch6/portal-search-elasticsearch6-api/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-search-elasticsearch6/portal-search-elasticsearch6-api/src/main/resources/content/Language_ja.properties
@@ -1,49 +1,49 @@
-additional-configurations=Additional Configurations (Automatic Copy)
-additional-configurations-help=Custom settings for embedded Elasticsearch, in YML format (elasticsearch.yml). (Automatic Copy)
-additional-index-configurations=Additional Index Configurations (Automatic Copy)
-additional-index-configurations-help=Custom settings for the Liferay index, in JSON or YML format (Elasticsearch Create Index API). (Automatic Copy)
-additional-type-mappings=Additional Type Mappings (Automatic Copy)
-additional-type-mappings-help=Custom mappings for the LiferayDocumentType, in JSON format (Elasticsearch Put Mapping API). This value should be set with new field mappings only. If you set this value with any overlapping mappings for default fields, index creation fails. To replace default mappings entirely, use overrideTypeMappings. (Automatic Copy)
-bootstrap-mlockall=Bootstrap Mlockall (Automatic Copy)
-bootstrap-mlockall-help=If this is checked, the process address space is locked into RAM, preventing any Elasticsearch memory from being swapped out. (Automatic Copy)
-client-transport-ignore-cluster-name=Client Transport Ignore Cluster Name (Automatic Copy)
-client-transport-ignore-cluster-name-help=If this is checked, the cluster name validation of connected nodes is ignored. (Automatic Copy)
-client-transport-nodes-sampler-interval=Client Transport Nodes Sampler Interval (Automatic Copy)
-client-transport-nodes-sampler-interval-help=Instructs the client node on how often to sample/ping the nodes listed and connected. (Automatic Copy)
-client-transport-sniff=Client Transport Sniff (Automatic Copy)
-client-transport-sniff-help=If this is checked, cluster sniffing is enabled to dynamically discover available nodes in the cluster. (Automatic Copy)
-cluster-name=Cluster Name (Automatic Copy)
-cluster-name-help=The name of the cluster to join. The name should match the remote cluster when Operation Mode is set to remote. (Automatic Copy)
-discovery-zen-ping-unicast-hosts-port=Zen Discovery Unicast Hosts Port (Automatic Copy)
-discovery-zen-ping-unicast-hosts-port-help=Range of ports to use when building the discovery.zen.ping.unicast.hosts value. Multiple Elasticsearch nodes on a range of ports can act as gossip routers at the same computer. (Automatic Copy)
+additional-configurations=追加設定
+additional-configurations-help=エンベデッド Elasticsearch のYML 形式 (elasticsearch.yml) でのカスタム設定
+additional-index-configurations=追加インデックス設定
+additional-index-configurations-help=JSON または YML 形式 (Elasticsearch インデックス作成 API) でのLiferay インデックスカスタム設定
+additional-type-mappings=追加タイプマッピング
+additional-type-mappings-help=JSON 形式 (Elasticsearch Putマッピング API) によるLiferayDocumentType のカスタム マッピングです。新しいフィールドを マッピングする時のみを設定してください。デフォルトのフィールドと重複するフィールドのマッピングを設定すると、インデックス作成は失敗します。デフォルトマッピング自体を置き換えるには、overrideTypeMappings を使用します。
+bootstrap-mlockall=Mlockallをブートストラップ
+bootstrap-mlockall-help=これをチェックすると、Elasticsearch メモリのスワップ アウトを防ぐために、プロセスのアドレス空間は RAMにロックされます。
+client-transport-ignore-cluster-name=クライアントのトランスポートは、クラスター名を無視します。
+client-transport-ignore-cluster-name-help=これをチェックすると、接続されたノードのクラスター名の検証が無視されます。
+client-transport-nodes-sampler-interval=クライアント・トランスポート・ノード のサンプル間隔
+client-transport-nodes-sampler-interval-help=指定された間隔(単位は秒)でクライアントノードにサンプル/ping 接続します。未設定の場合は、デフォルト Elasticsearch はclient.transport.nodes_sampler_interval を利用します
+client-transport-sniff=クライアント・トランスポート・スニフ
+client-transport-sniff-help=これをチェックすると、クラスター内の使用可能なノードを動的に発見するのに、クラスターのスニッフィングが有効になります。
+cluster-name=クラスター名
+cluster-name-help=参加するクラスターの名前。操作モードがリモートに設定されている場合、名前はリモート クラスターと一致する必要があります。
+discovery-zen-ping-unicast-hosts-port=Zenディスカバリー・ユニキャスト・ホストポート
+discovery-zen-ping-unicast-hosts-port-help=\ discovery.zen.ping.unicast.hosts の値を利用する際のポート範囲。指定レンジ内の複数の Elasticsearch ノードが、同じコンピューターでゴシップ ルーターとして機能できます。
 elastic-search-configuration-name=Elasticsearch
-http-cors-allow-origin=Http CORS Allow Origin (Automatic Copy)
-http-cors-allow-origin-help=Origins to allow when HTTP CORS is enabled. (Automatic Copy)
-http-cors-configurations=Http CORS Configurations (Automatic Copy)
-http-cors-configurations-help=Custom settings for HTTP CORS, in YML format (elasticsearch.yml). (Automatic Copy)
-http-cors-enabled=Http CORS Enabled (Automatic Copy)
-http-cors-enabled-help=If this is checked, cross-origin resource sharing is enabled, which determines whether a browser on another origin can make requests to Elasticsearch. If disabled, web front-end tools like elasticsearch-head may be unable to connect. (Automatic Copy)
-http-enabled=Http Enabled (Automatic Copy)
-http-enabled-help=If this is checked, the HTTP layer is enabled. If unchecked, the HTTP layer entirely on nodes which are not meant to serve REST requests directly are disabled. (Automatic Copy)
-index-name-prefix=Index Name Prefix (Automatic Copy)
-index-name-prefix-help=The prefix for the search index name. This value should not be changed under normal conditions. If you change this value, you must also reindex the portal and then manually delete the old index using the Elasticsearch administration console. (Automatic Copy)
-log-exceptions-only=Log Exceptions Only (Automatic Copy)
-log-exceptions-only-help=If this is checked, logs exceptions only from Elasticsearch and does not rethrow them. (Automatic Copy)
-network-bind-host=Network Bind Host (Automatic Copy)
-network-bind-host-help=The network interface(s) a node should bind to in order to listen for incoming requests. (Automatic Copy)
-network-host=Network Host (Automatic Copy)
-network-host-help=The hostname or IP address binded to the node, which is used to publish (advertise) the host to other nodes in the cluster. This is a shortcut which sets the bind host and the publish host at the same time. (Automatic Copy)
-network-publish-host=Network Publish Host (Automatic Copy)
-network-publish-host-help=The single interface the node advertises to other nodes in the cluster, so that those nodes can connect to it. (Automatic Copy)
-operation-mode=Operation Mode (Automatic Copy)
-operation-mode-help=The REMOTE operation mode connects to a remote standalone Elasticsearch cluster. The EMBEDDED operation mode starts Portal with an internal Elasticsearch instance in the same JVM. The EMBEDDED operation mode is unsupported. (Automatic Copy)
-override-type-mappings=Override Type Mappings (Automatic Copy)
-override-type-mappings-help=Override mappings for the entire LiferayDocumentType, in JSON format (Elasticsearch Put Mapping API). If you set this value, index creation ignores the default mappings definition and any extension points, using this alternative mappings definition instead. Use this if you need LiferayDocumentType to be created with nonstandard mappings for default fields. If you just need to add new custom mappings without overlapping any defaults, use additionalTypeMappings. (Automatic Copy)
-retry-on-conflict=Retry on Conflict (Automatic Copy)
-retry-on-conflict-help=The number of retries if a version conflict occurs because the document was updated between retrieving it and updating it. (Automatic Copy)
-sync-search=Synchronized Search (Automatic Copy)
-sync-search-help=If this is checked, search runs on invoker thread rather than in Elasticsearch's search thread pool. This only applies to EMBEDDED operation mode. (Automatic Copy)
-transport-addresses=Transport Addresses (Automatic Copy)
-transport-addresses-help=The remote node addresses to connect to. This value is required when Operation Mode is set to REMOTE. (Automatic Copy)
-transport-tcp-port=Transport TCP Port (Automatic Copy)
-transport-tcp-port-help=The port to bind for communication between nodes. Accepts a single value or a range (e.g., 9300-9400). (Automatic Copy)
+http-cors-allow-origin=Http CORS 許可オリジン
+http-cors-allow-origin-help=HTTP CORSが有効な時の、許可するオリジン
+http-cors-configurations=Http CORS 設定
+http-cors-configurations-help=HTTP CORSのYML 形式 (elasticsearch.yml) でのカスタム設定
+http-cors-enabled=Http CORSが有効
+http-cors-enabled-help=チェックされている場合、クロスオリジン・リソース共有が有効になります。それにより別オリジンのブラウザーが、 Elasticsearch に対してリクエストを送信できるようになります。無効にした場合、Elasticsearch-headのような web フロント エンド ツールは接続できなくなります。
+http-enabled=Httpが有効
+http-enabled-help=チェックされている場合、HTTP レイヤーが有効になります。RESTリクエストを提供しないノードの全HTTPレイヤーは無効に設定されます。
+index-name-prefix=インデックス名プレフィックス
+index-name-prefix-help=検索インデックス名のプレフィックス。通常、この値は変更しないでください。この値を変更した場合は、インデックスを再作成し、Elasticsearch 管理コンソールを使用して、古いインデックスを手動で削除する必要があります。
+log-exceptions-only=例外のみロギングする
+log-exceptions-only-help=チェックされている場合、Elasticsearchからの例外のみロギングし、再度例外をスローしません
+network-bind-host=ネットワークバインドホスト
+network-bind-host-help=リクエストをリッスンするのに必要な、ノードが接続すべきネットワークインターフェース。
+network-host=ネットワーク ホスト
+network-host-help=ノードに紐づいているホスト名または IP アドレスは、クラスター内の他のノードに公開(アドバタイズ) するのに利用されます。これは、同時にバインド ホストと発行ホストを設定するショートカットです。
+network-publish-host=ネットワーク公開ホスト
+network-publish-host-help=ノードは単一インターフェイスを利用して、クラスター内の他のノードに接続するためにアドバタイズします。
+operation-mode=動作モード
+operation-mode-help=REMOTEモードは、リモートのスタンドアロン Elasticsearch クラスターに接続します。EMBEDDEDモードは、ポータルと同じ JVM 内の内部 Elasticsearch インスタンスとして起動します。EMBEDDEDモードはサポート対象外となります。
+override-type-mappings=タイプマッピングをオーバーライドする
+override-type-mappings-help=JSON 形式 (Elasticsearch Put Mapping API) で表されるLiferayDocumentType全てをオーバーライドします。この値を設定すると、任意の拡張ポイントを含む、デフォルトのマッピング定義は無視されます。LiferayDocumentTypeがデフォルトと異なるマッピングで作成する必要がある場合に利用してください。オーバーライドするのではなく、新しいカスタム マッピングを追加する場合は、additionalTypeMappings を使用してください。
+retry-on-conflict=競合を再試行します。
+retry-on-conflict-help=ドキュメントを取得してアップデートする間に、バージョン間のコンフリクトが発生した場合、再トライする回数
+sync-search=同期された検索
+sync-search-help=これがチェックされている場合は、Elasticsearch の検索スレッド プールではなく、呼び出し元のスレッドで検索が実行されます。これは、EMBEDDEDモードにのみ適用されます。
+transport-addresses=トランスポート アドレス
+transport-addresses-help=接続先のリモート ノード アドレス。この値は、実行モードがREMOTEモードに設定されている時に必須です。
+transport-tcp-port=トランスポート TCP ポート
+transport-tcp-port-help=ノード間の通信でバインドするポート。単一の値または範囲 (例えば、9300-9400)で指定できます。
