--- a/modules/apps/web-experience/fragment/fragment-item-selector-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/web-experience/fragment/fragment-item-selector-web/src/main/resources/content/Language_ja.properties
@@ -1,4 +1,4 @@
-collections=Collections (Automatic Copy)
-fragments=Fragments (Automatic Copy)
-there-are-no-collections=There are no collections. (Automatic Copy)
-there-are-no-fragments=There are no fragments. (Automatic Copy)
+collections=コレクション
+fragments=フラグメント
+there-are-no-collections=コレクションがありません
+there-are-no-fragments=フラグメントがありません
