--- a/portal-impl/src/content/Language_ja.properties
+++ b/portal-impl/src/content/Language_ja.properties
@@ -1741,7 +1741,7 @@ email-to=メールの宛先
 email-verification-code=メール検証コード
 email-verification-notification=メール検証通知
 emails=メール
-embedded=埋め込み
+embedded=Embedded
 embedded-assets=埋め込みアセット
 emoticons=顔文字
 employee-id=従業員ID
@@ -2451,7 +2451,7 @@ layout-templates=レイアウトテンプレート
 layout.types.article=Webコンテンツ
 layout.types.article.description=このページ種別は廃止予定です。Webコンテンツディスプレイポートレットと<em>ポートレット</em>ページを利用してください。
 layout.types.control_panel=コントロールパネル
-layout.types.embedded=埋め込み
+layout.types.embedded=Embedded
 layout.types.embedded.description=他のウェブサイトからのコンテンツを見せる
 layout.types.panel=パネル
 layout.types.panel.description=既存のアプリケーションとナビゲーションでページを作成
