--- a/modules/apps/foundation/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/foundation/configuration-admin/configuration-admin-web/src/main/resources/content/Language_ja.properties
@@ -1,56 +1,56 @@
-category-set.commerce=Commerce (Automatic Copy)
-category-set.content-management=Content Management (Automatic Copy)
-category-set.other=Other (Automatic Copy)
-category-set.platform=Platform (Automatic Copy)
-category-set.security=Security (Automatic Copy)
-category-set.social=Social (Automatic Copy)
-category.adaptive-media=Adaptive Media (Automatic Copy)
-category.api-authentication=API Authentication (Automatic Copy)
-category.assets=Assets (Automatic Copy)
-category.auto-login=Auto Login (Automatic Copy)
-category.blogs=Blogs (Automatic Copy)
-category.breadcrumbs=Breadcrumbs (Automatic Copy)
-category.captcha=CAPTCHA (Automatic Copy)
-category.chat=Chat (Automatic Copy)
-category.connectors=Connectors (Automatic Copy)
-category.display-content=Display Content (Automatic Copy)
-category.documents-and-media=Documents and Media (Automatic Copy)
-category.dynamic-data-lists=Dynamic Data Lists (Automatic Copy)
-category.dynamic-data-mapping=Dynamic Data Mapping (Automatic Copy)
-category.file-storage=File Storage (Automatic Copy)
-category.forms=Forms (Automatic Copy)
-category.frontend-infrastructure=Frontend Infrastructure (Automatic Copy)
-category.general=General (Automatic Copy)
-category.infrastructure=Infrastructure (Automatic Copy)
-category.knowledge-base=Knowledge Base (Automatic Copy)
-category.ldap=LDAP (Automatic Copy)
-category.localization=Localization (Automatic Copy)
-category.messaging=Messaging (Automatic Copy)
-category.mobile-and-devices=Mobile and devices (Automatic Copy)
-category.module-container=Module Container (Automatic Copy)
-category.navigation=Navigation (Automatic Copy)
-category.open-id=OpenID (Automatic Copy)
-category.other=Other (Automatic Copy)
-category.page-administration=Page Administration (Automatic Copy)
-category.push-notifications=Push Notifications (Automatic Copy)
-category.rss=RSS (Automatic Copy)
-category.scripting-engines=Scripting Engines (Automatic Copy)
-category.search=Search (Automatic Copy)
-category.security=Security (Automatic Copy)
-category.shopping=Shopping (Automatic Copy)
-category.social-networks=Social Networks (Automatic Copy)
-category.sso=SSO (Automatic Copy)
-category.template-engines=Template Engines (Automatic Copy)
-category.third-party=Third Party (Automatic Copy)
-category.tools=Tools (Automatic Copy)
-category.upgrades=Upgrades (Automatic Copy)
-category.user-activity=User Activity (Automatic Copy)
-category.users=Users (Automatic Copy)
-category.web-api=Web API (Automatic Copy)
-category.web-content=Web Content (Automatic Copy)
-category.wiki=Wiki (Automatic Copy)
-category.workflow=Workflow (Automatic Copy)
-category.xsl-content=XSL Content (Automatic Copy)
+category-set.commerce=Eコマース
+category-set.content-management=コンテンツ管理
+category-set.other=その他
+category-set.platform=プラットフォーム
+category-set.security=セキュリティ
+category-set.social=ソーシャル
+category.adaptive-media=アダプティブメディア
+category.api-authentication=API 認証
+category.assets=アセット
+category.auto-login=自動ログイン
+category.blogs=ブログ
+category.breadcrumbs=パンくずリスト
+category.captcha=キャプチャ
+category.chat=チャット
+category.connectors=コネクタ
+category.display-content=コンテンツを表示
+category.documents-and-media=ドキュメント&メディア
+category.dynamic-data-lists=動的データリスト
+category.dynamic-data-mapping=動的データマッピング
+category.file-storage=ファイル ストレージ
+category.forms=フォーム
+category.frontend-infrastructure=フロントエンド・インフラストラクチャ
+category.general=一般
+category.infrastructure=インフラストラクチャー
+category.knowledge-base=ナレッジ・ベース
+category.ldap=LDAP
+category.localization=ローカライズ
+category.messaging=メッセージング
+category.mobile-and-devices=モバイルとデバイス
+category.module-container=モジュール・コンテナー
+category.navigation=ナビゲーション
+category.open-id=OpenID
+category.other=その他
+category.page-administration=ページ管理
+category.push-notifications=プッシュ通知
+category.rss=RSS
+category.scripting-engines=スクリプト エンジン
+category.search=検索
+category.security=セキュリティ
+category.shopping=ショッピング
+category.social-networks=ソーシャルネットワーク
+category.sso=SSO
+category.template-engines=テンプレート エンジン
+category.third-party=サードパーティー
+category.tools=ツール
+category.upgrades=アップグレード
+category.user-activity=ユーザーアクティビティー
+category.users=ユーザー
+category.web-api=Web API
+category.web-content=Webコンテンツ
+category.wiki=Wiki
+category.workflow=ワークフロー
+category.xsl-content=XSLコンテンツ
 collaboration=コラボレーション
 configuration-entries=設定エントリー
 default-configuration-for-all-sites=すべてのサイトのデフォルト設定
@@ -65,9 +65,9 @@ javax.portlet.title.com_liferay_configuration_admin_web_portlet_SystemSettingsPo
 no-configurations-were-found=設定が見つかりません
 no-entries-for-x-have-been-added-yet={0}のエントリーはまだ追加されていません。以下の「追加」ボタンで最初のエントリを追加してください。
 reset-default-values=デフォルト値をリセットする
-scope.company=Virtual Instance Scope (Automatic Copy)
-scope.group=Site Scope (Automatic Copy)
-scope.portlet-instance=Application Instances (Automatic Copy)
-scope.system=System Scope (Automatic Copy)
+scope.company=仮想インスタンススコープ
+scope.group=サイトスコープ
+scope.portlet-instance=アプリケーション・インスタンス
+scope.system=システムスコープ
 this-configuration-was-not-saved-yet=個の設定はまだ保存されていません。表示されている値はデフォルトです。
 web-experience=Webエクスペリエンス
