--- a/modules/apps/foundation/contacts/contacts-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/foundation/contacts/contacts-web/src/main/resources/content/Language_zh_CN.properties
@@ -28,7 +28,7 @@ my-connections=我的联系人
 my-contacts=我的联络名单
 no-last-name=没有姓氏
 people=人
-receive-a-notification-when-someone-sends-you-a-social-relationship-request=发送你的社会关系的请求。 (Automatic Translation)
+receive-a-notification-when-someone-sends-you-a-social-relationship-request=向您发送社交关系请求。
 recent-activity=近期活动
 send-message=发送消息
 show-additional-email-addresses=显示邮箱地址
