--- a/modules/apps/foundation/organizations/organizations-api/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/foundation/organizations/organizations-api/src/main/resources/content/Language_ja.properties
@@ -1,4 +1,4 @@
-organization-link-configuration-name=Organization Links (Automatic Copy)
-organization-link-enabled-description=Check to enable defining arbitrary links between organizations. (Automatic Copy)
-organization-link-types=Organization Link Types (Automatic Copy)
-organization-link-types-description=This is the name of an Organization Link type. It will show up as an option when creating an Organization Link. (Automatic Copy)
+organization-link-configuration-name=組織リンク
+organization-link-enabled-description=組織間の任意リンクを定義可能にする
+organization-link-types=組織リンク種別
+organization-link-types-description=これは組織リンク種別名です。組織リンクを作成するとオプションとして表示されます
