--- a/modules/apps/foundation/organizations/organizations-service/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/foundation/organizations/organizations-service/src/main/resources/content/Language_ja.properties
@@ -1,5 +1,5 @@
-children-types=Children Types (Automatic Copy)
-country-enabled=Country Enabled (Automatic Copy)
-country-required=Country Required (Automatic Copy)
-organization-type-configuration-name=Organization Type (Automatic Copy)
-rootable=Rootable (Automatic Copy)
+children-types=子要素種別
+country-enabled=有効な国
+country-required=必須の国
+organization-type-configuration-name=組織種別
+rootable=ルートに指定可能
