--- a/modules/apps/foundation/portal-security-sso/portal-security-sso-openid-connect-impl/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/foundation/portal-security-sso/portal-security-sso-openid-connect-impl/src/main/resources/content/Language_ja.properties
@@ -19,10 +19,10 @@ open-id-connect-provider-configuration-name=OpenID Connect プロバイダー
 provider-name=プロバイダー名
 provider-name-help=OpenID Connect プロバイダー名を設定
 scopes=スコープ
-scopes-help=Set the scopes Liferay will request during authentication. Scopes are delimited with spaces. (Automatic Copy)
-subject-types=Subject Types (Automatic Copy)
-subject-types-help=Set the subject types for the OpenID Connect provider. (Automatic Copy)
-token-endpoint=Token Endpoint (Automatic Copy)
-token-endpoint-help=Set the token endpoint for the OpenID Connect provider. (Automatic Copy)
-user-info-endpoint=User Information Endpoint (Automatic Copy)
-user-info-endpoint-help=Set the user information endpoint for the OpenID Connect provider. (Automatic Copy)
+scopes-help=Liferayが認証中に要求するスコープを設定します。スコープは、スペースで区切られます
+subject-types=サブジェクトタイプ
+subject-types-help=OpenID Connect プロバイダー用のサブジェクトタイプを設定
+token-endpoint=トークン エンドポイント
+token-endpoint-help=OpenID Connectプロバイダーのためのトークンエンドポイントを設定
+user-info-endpoint=ユーザー情報エンドポイント
+user-info-endpoint-help=OpenID Connectプロバイダーのためのユーザー情報エンドポイントを設定
