--- a/modules/apps/web-experience/layout/layout-type-controller/layout-type-controller-asset-display/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/web-experience/layout/layout-type-controller/layout-type-controller-asset-display/src/main/resources/content/Language_ja.properties
@@ -1,3 +1,3 @@
-layout.types.asset_display=Asset Display (Automatic Copy)
-layout.types.asset_display.description=Create a page that only serves as a container to show assets based on a page template. (Automatic Copy)
-there-is-no-content-to-be-displayed=There is no content to be displayed. (Automatic Copy)
+layout.types.asset_display=アセット表示
+layout.types.asset_display.description=ページテンプレートを元に、アセットを表示するコンテナとしてのみ動作するページを作成します。
+there-is-no-content-to-be-displayed=表示するコンテンツはありません
