--- a/modules/apps/web-experience/site-navigation/site-navigation-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-lang/src/main/resources/content/Language_ja.properties
@@ -1,144 +1,144 @@
-add-menu=Add Menu (Automatic Copy)
-add-new-menu=Add New Menu (Automatic Copy)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
-all-menus=All Menus (Automatic Copy)
-breadcrumb-entries=Breadcrumb Entries (Automatic Copy)
-breadcrumb-entries-help=Represents the list of breadcrumb entries that can be displayed through this template. (Automatic Copy)
-breadcrumb-entry=Breadcrumb Entry (Automatic Copy)
-breadcrumb-entry-help=Represents the breadcrumb entry that is displayed through this template or the first in the list if there is more than one. (Automatic Copy)
-breadcrumb-util=Breadcrumb Util (Automatic Copy)
-breadcrumb-util-help=Provides utility methods to access current breadcrumb entries. (Automatic Copy)
-bullet-style=Bullet Style (Automatic Copy)
-current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
-current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-ddm-template-key=DDM Template Key (Automatic Copy)
-ddm-template-key-default=DDM Template Key Default (Automatic Copy)
-display-current-locale=Display Current Locale (Automatic Copy)
-display-depth=Display Depth (Automatic Copy)
-display-style=Display Style (Automatic Copy)
-display-style-group-id=Display Style Group ID (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
-expand-sublevels=Expand Sublevels (Automatic Copy)
-header-type=Header Type (Automatic Copy)
-header-type-help=Specifies the header type that is used for the navigation menu. (Automatic Copy)
-include-root-in-tree=Include Root in Tree (Automatic Copy)
-included-layouts=Included Pages (Automatic Copy)
-included-layouts-help=Determines whether all branch navigation items are displayed. (Automatic Copy)
-javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigation Menus (Automatic Copy)
-javax.portlet.title.com_liferay_site_navigation_breadcrumb_web_portlet_SiteNavigationBreadcrumbPortlet=Breadcrumb (Automatic Copy)
-javax.portlet.title.com_liferay_site_navigation_directory_web_portlet_SitesDirectoryPortlet=Sites Directory (Automatic Copy)
-javax.portlet.title.com_liferay_site_navigation_language_web_portlet_SiteNavigationLanguagePortlet=Language Selector (Automatic Copy)
-javax.portlet.title.com_liferay_site_navigation_menu_web_portlet_SiteNavigationMenuPortlet=Navigation Menu (Automatic Copy)
-javax.portlet.title.com_liferay_site_navigation_site_map_web_portlet_SiteNavigationSiteMapPortlet=Site Map (Automatic Copy)
-language-ids=Language IDs (Automatic Copy)
-level-relative-to-the-current-menu-item=Level Relative to the Current Menu Item (Automatic Copy)
-mark-as=Mark As: (Automatic Copy)
-menu-item=Menu Item (Automatic Copy)
-menu-items-to-show=Menu Items to Show (Automatic Copy)
-menus=Menus (Automatic Copy)
-navigation=Navigation (Automatic Copy)
-navigation-item=Navigation Item Class (Automatic Copy)
-navigation-item-help=Navigation Item Class (Automatic Copy)
-navigation-items=Navigation Entries (Automatic Copy)
-navigation-items-help=Navigation Entries (Automatic Copy)
-navigation-menu=Navigation Menu (Automatic Copy)
-navigation-menu-items=Navigation Menu Items (Automatic Copy)
-navigation-menus=Navigation Menus (Automatic Copy)
-navigation-util=Navigation Util (Automatic Copy)
-nested-children=Nested Children (Automatic Copy)
-nested-children-help=Nested Children (Automatic Copy)
-pages-help=Represents the list of pages that are displayed in the Site Map. (Automatic Copy)
-please-add-elements=Please add elements. (Automatic Copy)
-please-select-a-menu-item-to-continue=Please select a menu item to continue. (Automatic Copy)
-portlet-display-template-description-arrows=Displays a breadcrumb in which every navigation element is represented by an arrow with its title and link. (Automatic Copy)
-portlet-display-template-description-horizontal=Displays a breadcrumb horizontally. (Automatic Copy)
-portlet-display-template-description-icon=Displays the icon of the flag associated with each language. (Automatic Copy)
-portlet-display-template-description-icon-menu=Displays an icon menu with the selected languages. (Automatic Copy)
-portlet-display-template-description-list-menu=Displays a navigation menu with a list. (Automatic Copy)
-portlet-display-template-description-long-text=Displays the full name of each language (e.g. Spanish). (Automatic Copy)
-portlet-display-template-description-multi-column-layout-sitemap=Displays a column for each top level page. Each column includes the name of a top level page with the page's immediate children listed underneath. (Automatic Copy)
-portlet-display-template-description-nav-pills=Displays a navigation menu with navigation items shown as pills. (Automatic Copy)
-portlet-display-template-description-nav-pills-justified=Displays a navigation menu with justified navigation items shown as pills. (Automatic Copy)
-portlet-display-template-description-nav-pills-stacked=Displays a navigation menu with stacked navigation items shown as pills. (Automatic Copy)
-portlet-display-template-description-nav-tabs=Displays a navigation menu with navigation items shown as tabs. (Automatic Copy)
-portlet-display-template-description-nav-tabs-justified=Displays a navigation menu with justified navigation items shown as tabs. (Automatic Copy)
-portlet-display-template-description-navbar-blank=Displays a navigation menu with a minimally styled navigation bar. (Automatic Copy)
-portlet-display-template-description-navbar-blank-justified=Displays a navigation menu with a minimally justified styled navigation bar. (Automatic Copy)
-portlet-display-template-description-navbar-default=Displays a navigation menu with a default styled navigation bar. (Automatic Copy)
-portlet-display-template-description-navigation-menu-macro=Contains common macros for navigation menu templates. (Automatic Copy)
-portlet-display-template-description-select-box=Displays a select box with the selected languages. (Automatic Copy)
-portlet-display-template-description-short-text=Displays an abbreviation of each language (e.g. ES). (Automatic Copy)
-portlet-display-template-description-split-button-dropdowns=Displays a dropdown navigation menu with root menu items shown as buttons. (Automatic Copy)
-portlet-display-template-description-vertical=Displays a breadcrumb vertically. (Automatic Copy)
-portlet-display-template-name-arrows=Arrows (Automatic Copy)
-portlet-display-template-name-horizontal=Horizontal (Automatic Copy)
-portlet-display-template-name-icon=Icon (Automatic Copy)
-portlet-display-template-name-icon-menu=Icon Menu (Automatic Copy)
-portlet-display-template-name-list-menu=List Menu (Automatic Copy)
-portlet-display-template-name-long-text=Long Text (Automatic Copy)
-portlet-display-template-name-nav-pills=Pills Horizontal (Automatic Copy)
-portlet-display-template-name-nav-pills-justified=Pills Justified (Automatic Copy)
-portlet-display-template-name-nav-pills-stacked=Pills Stacked (Automatic Copy)
-portlet-display-template-name-nav-tabs=Tabs (Automatic Copy)
-portlet-display-template-name-nav-tabs-justified=Tabs Justified (Automatic Copy)
-portlet-display-template-name-navbar-blank=Bar minimally styled (Automatic Copy)
-portlet-display-template-name-navbar-blank-justified=Bar minimally justified styled (Automatic Copy)
-portlet-display-template-name-navbar-default=Bar default styled (Automatic Copy)
-portlet-display-template-name-navigation-menu-macro=Navigation common macros (Automatic Copy)
-portlet-display-template-name-select-box=Select Box (Automatic Copy)
-portlet-display-template-name-short-text=Short Text (Automatic Copy)
-portlet-display-template-name-split-button-dropdowns=Split Button Dropdowns (Automatic Copy)
-portlet-display-template-name-vertical=Vertical (Automatic Copy)
-preview=Preview (Automatic Copy)
-primary-navigation=Primary Navigation (Automatic Copy)
-rename-site-navigation-menu=Rename Navigation Menu (Automatic Copy)
-root-layout-level=Root Page Level (Automatic Copy)
-root-layout-level-help=Root Page Level (Automatic Copy)
-root-layout-type=Root Page Type (Automatic Copy)
-root-layout-type-help=Root Page Type (Automatic Copy)
-root-layout-uuid=Root Layout UUID (Automatic Copy)
-root-menu-item-id=Root Menu Item ID (Automatic Copy)
-root-menu-item-level=Root Menu Item Level (Automatic Copy)
-root-menu-item-type=Root Menu Item Type (Automatic Copy)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-select-site-navigation-menu=Select Site Navigation Menu (Automatic Copy)
-select-site-navigation-menu-item=Select Site Navigation Menu Item (Automatic Copy)
-show-application-breadcrumb=Show Application Breadcrumb (Automatic Copy)
-show-current-group=Show Current Group (Automatic Copy)
-show-current-page=Show Current Page (Automatic Copy)
-show-current-site=Show Current Site (Automatic Copy)
-show-guest-group=Show Guest Group (Automatic Copy)
-show-guest-site=Show Guest Site (Automatic Copy)
-show-hidden-pages=Show Hidden Pages (Automatic Copy)
-show-layout=Show Layout (Automatic Copy)
-show-page=Show Page (Automatic Copy)
-show-parent-groups=Show Parent Groups (Automatic Copy)
-show-parent-sites=Show Parent Sites (Automatic Copy)
-show-portlet-breadcrumb=Show Portlet Breadcrumb (Automatic Copy)
-site-map-display-context=Site Map Display Context (Automatic Copy)
-site-map-display-context-help=Provides helper methods to retrieve the Site Map portlet configuration. (Automatic Copy)
-site-navigation-breadcrumb-portlet-instance-configuration-name=Breadcrumb (Automatic Copy)
-site-navigation-breadcrumb-web-template-configuration-name=Breadcrumb Template (Automatic Copy)
-site-navigation-language-portlet-instance-configuration-name=Language Selector (Automatic Copy)
-site-navigation-language-web-template-configuration-name=Language Template (Automatic Copy)
-site-navigation-menu-id=Site Navigation Menu ID (Automatic Copy)
-site-navigation-menu-portlet-instance-configuration-name=Navigation Menu (Automatic Copy)
-site-navigation-menu-type=Site Navigation Menu Type (Automatic Copy)
-site-navigation-menu-web-template-configuration-name=Navigation Menu Template (Automatic Copy)
-site-navigation-site-map-portlet-instance-configuration-name=Site Map (Automatic Copy)
-sites=Sites (Automatic Copy)
-sites-directory-portlet-instance-configuration-name=Sites Directory (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
-start-with-menu-items-in=Start with Menu Items In (Automatic Copy)
-sublevels-to-display=Sublevels to Display (Automatic Copy)
-submenu=Submenu (Automatic Copy)
-the-order-of-site-navigation-menu-items-is-invalid=The order of site navigation menu items is invalid. (Automatic Copy)
-the-page-was-created-succesfully=The page was created successfully. (Automatic Copy)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
-there-are-no-navigation-menus=There are no navigation menus. (Automatic Copy)
-there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=There are no navigation menus. You can add a menu by clicking the plus button on the bottom right corner. (Automatic Copy)
-there-is-no-x-available-for-the-current-site=There is no <em>{0}</em> available for the current site. (Automatic Copy)
-this-menu-is-empty=This menu is empty. (Automatic Copy)
-this-menu-will-act-as-the=This menu will act as the: (Automatic Copy)
-use-html-title=Use HTML Title (Automatic Copy)
+add-menu=メニューを追加
+add-new-menu=新規メニューを追加
+add-new-pages-to-this-menu=このメニューに新規ページを追加
+all-menus=全メニュー
+breadcrumb-entries=パンくずリストエントリー
+breadcrumb-entries-help=テンプレートで表示される、パンくずリストのエントリーを表します。
+breadcrumb-entry=パンくずリストエントリー
+breadcrumb-entry-help=テンプレートで表示される、パンくずリストのエントリー、もしくは１つ以上存在すればリストの最初のものを表します。
+breadcrumb-util=パンくずリストユーテリィティ
+breadcrumb-util-help=現在のパンくずリストエントリーにアクセスする、ユーティリティメソッドを提供します。
+bullet-style=矢印形式
+current-main-menu-x=現在のメインメニュー: {0}
+current-selected-menu-x=現在の選択されているメニュー: {0}
+ddm-template-key=DDMテンプレートキー
+ddm-template-key-default=デフォルトDDMテンプレートキー
+display-current-locale=現在のロケール表示
+display-depth=表示する階層
+display-style=表示スタイル
+display-style-group-id=表示形式グループID
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=プライマリナビゲーションを、{0} から{1} に置換してよろしいですか？この操作はプラマリナビゲーションを利用している全てのページに影響します。
+expand-sublevels=サブレベルを展開
+header-type=ヘッダー種別
+header-type-help=ナビゲーションメニューで使われるヘッダー種別を指定します
+include-root-in-tree=ルートもツリーに含む
+included-layouts=含まれているページ
+included-layouts-help=全てのナビゲーション項目が表示されるか決定する
+javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=ナビゲーションメニュー
+javax.portlet.title.com_liferay_site_navigation_breadcrumb_web_portlet_SiteNavigationBreadcrumbPortlet=パンくずリスト
+javax.portlet.title.com_liferay_site_navigation_directory_web_portlet_SitesDirectoryPortlet=サイトディレクトリ
+javax.portlet.title.com_liferay_site_navigation_language_web_portlet_SiteNavigationLanguagePortlet=言語選択
+javax.portlet.title.com_liferay_site_navigation_menu_web_portlet_SiteNavigationMenuPortlet=ナビゲーションメニュー
+javax.portlet.title.com_liferay_site_navigation_site_map_web_portlet_SiteNavigationSiteMapPortlet=サイトマップ
+language-ids=言語 ID
+level-relative-to-the-current-menu-item=現在のメニュー項目に関連するレベル
+mark-as=印をつける
+menu-item=メニュー項目
+menu-items-to-show=表示するメニュー項目
+menus=メニュー
+navigation=ナビゲーション
+navigation-item=ナビゲーション アイテムのクラス
+navigation-item-help=ナビゲーション アイテムのクラス
+navigation-items=ナビゲーション・エントリー
+navigation-items-help=ナビゲーション・エントリー
+navigation-menu=ナビゲーションメニュー
+navigation-menu-items=ナビゲーションメニュー項目
+navigation-menus=ナビゲーションメニュー
+navigation-util=ナビゲーションユーティリティ
+nested-children=入れ子要素
+nested-children-help=入れ子要素
+pages-help=サイトマップに表示されるページのリストを表します。
+please-add-elements=要素を追加してください。
+please-select-a-menu-item-to-continue=継続するにはメニュー項目を選択してください
+portlet-display-template-description-arrows=全てのナビゲーション要素が矢印とタイトル、リンクで表示されるように、パンくずリストを表示します。
+portlet-display-template-description-horizontal=パンくずリストをを水平方向に表示します
+portlet-display-template-description-icon=各言語に関連付けられたフラグのアイコンを表示します
+portlet-display-template-description-icon-menu=選択した言語のアイコンメニューを表示します。
+portlet-display-template-description-list-menu=ナビゲーションメニューをリストで表示します
+portlet-display-template-description-long-text=各言語 (スペイン語など) を完全な名前で表示します
+portlet-display-template-description-multi-column-layout-sitemap=最上位のページごとに列を表示します。各列には、トップレベルのページの名前と、直下のサブページのページ名を含みます。
+portlet-display-template-description-nav-pills=ピル形式でナビゲーションメニューを表示します。
+portlet-display-template-description-nav-pills-justified=等幅のピル形式でナビゲーションメニューを表示します
+portlet-display-template-description-nav-pills-stacked=縦方向に並べたピル形式でナビゲーションメニューを表示します
+portlet-display-template-description-nav-tabs=タブ形式で並べたナビゲーションを表示します
+portlet-display-template-description-nav-tabs-justified=等幅タブ形式でナビゲーションメニューを表示します。
+portlet-display-template-description-navbar-blank=最小スタイルでナビゲーションメニューを表示します
+portlet-display-template-description-navbar-blank-justified=最小スタイルの等幅形式でナビゲーションメニューを表示します。
+portlet-display-template-description-navbar-default=デフォルト形式でナビゲーションメニューを表示します。
+portlet-display-template-description-navigation-menu-macro=ナビゲーションメニューテンプレート用のマクロを含みます
+portlet-display-template-description-select-box=セレクトボックスで選択された言語を表示します。
+portlet-display-template-description-short-text=各言語 (例えば ES) の省略形で表示します。
+portlet-display-template-description-split-button-dropdowns=ボタン形式のドロップダウンでナビゲーション メニューを表示します。
+portlet-display-template-description-vertical=パンくずリストをを垂直方向に表示します
+portlet-display-template-name-arrows=矢印
+portlet-display-template-name-horizontal=水平方向
+portlet-display-template-name-icon=アイコン
+portlet-display-template-name-icon-menu=アイコン メニュー
+portlet-display-template-name-list-menu=リスト メニュー
+portlet-display-template-name-long-text=長いテキスト
+portlet-display-template-name-nav-pills=水平方向のピル形式
+portlet-display-template-name-nav-pills-justified=等幅ピル形式
+portlet-display-template-name-nav-pills-stacked=縦積みピル形式
+portlet-display-template-name-nav-tabs=タブ
+portlet-display-template-name-nav-tabs-justified=等幅ピル形式
+portlet-display-template-name-navbar-blank=最小バー形式
+portlet-display-template-name-navbar-blank-justified=最小等幅バー形式
+portlet-display-template-name-navbar-default=規定スタイルのバー
+portlet-display-template-name-navigation-menu-macro=ナビゲーションの一般的なマクロ
+portlet-display-template-name-select-box=セレクトボックス
+portlet-display-template-name-short-text=短いテキスト
+portlet-display-template-name-split-button-dropdowns=スプリットボタンのドロップダウン
+portlet-display-template-name-vertical=垂直方向
+preview=プレビュー
+primary-navigation=プライマリ ナビゲーション
+rename-site-navigation-menu=ナビゲーション メニューの名前を変更します。
+root-layout-level=ルートページレベル
+root-layout-level-help=ルートページレベル
+root-layout-type=ルートページタイプ
+root-layout-type-help=ルートページタイプ
+root-layout-uuid=ルート レイアウト UUID
+root-menu-item-id=ルート メニュー項目 ID
+root-menu-item-level=ルート メニュー項目レベル
+root-menu-item-type=ルートメニュー項目の種類
+secondary=セカンダリ
+secondary-navigation=セカンダリー・ナビゲーション
+select-site-navigation-menu=サイトナビゲーション メニューを選択します。
+select-site-navigation-menu-item=サイトナビゲーション メニューの項目を選択します。
+show-application-breadcrumb=アプリケーションのパンくずリストを表示します。
+show-current-group=現在のグループを表示
+show-current-page=現在のページを表示
+show-current-site=現在のサイトを表示
+show-guest-group=ゲストグループを表示
+show-guest-site=ゲストサイトを表示
+show-hidden-pages=非表示ページを表示
+show-layout=レイアウトを表示
+show-page=ページを表示
+show-parent-groups=親グループを表示
+show-parent-sites=親サイトを表示
+show-portlet-breadcrumb=ポートレットのパンくずリストを表示
+site-map-display-context=サイト マップ ディスプレイ コンテキスト
+site-map-display-context-help=サイトマップ ポートレット設定を取得する、ヘルパー メソッドを提供します。
+site-navigation-breadcrumb-portlet-instance-configuration-name=パンくずリスト
+site-navigation-breadcrumb-web-template-configuration-name=パンくずリストテンプレート
+site-navigation-language-portlet-instance-configuration-name=言語選択
+site-navigation-language-web-template-configuration-name=言語テンプレート
+site-navigation-menu-id=サイトナビゲーションメニューID
+site-navigation-menu-portlet-instance-configuration-name=ナビゲーションメニュー
+site-navigation-menu-type=サイトナビゲーションメニュータイプ
+site-navigation-menu-web-template-configuration-name=ナビゲーションメニュー・テンプレート
+site-navigation-site-map-portlet-instance-configuration-name=サイトマップ
+sites=サイト
+sites-directory-portlet-instance-configuration-name=サイトディレクトリ
+social-navigation=ソーシャルナビゲーション
+start-with-menu-items-in=メニュー項目を以下から始める:
+sublevels-to-display=表示するレベルの深さ
+submenu=サブメニュー
+the-order-of-site-navigation-menu-items-is-invalid=サイトメニューナビゲーション要素の順番が無効です。
+the-page-was-created-succesfully=ページが作成されました
+the-primary-menu-for-this-site-is-already-defined=このサイトの初期メニューはすでに定義されています
+there-are-no-navigation-menus=ナビゲーションメニューがありません
+there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=ナビゲーションメニューがありません。右下のプラスボタンから追加できます
+there-is-no-x-available-for-the-current-site=現在のサイトで<em>{0}</em> は利用できません
+this-menu-is-empty=メニューが空です
+this-menu-will-act-as-the=このメニューは以下のように動作します:
+use-html-title=HTMLタイトルを利用する
