--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_hu.properties
@@ -3,11 +3,11 @@ add-new-vocabulary=Új szótár
 add-vocabulary=Új szótár
 all-asset-subtypes=Összes tartalom altípus
 all-asset-types=Összes tartalomtípus
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Lehetővé teszi a lapos navigációs (Automatic Translation)
 allow-multiple-categories=Többféle kategória engedélyezése
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=Eszköz kategóriák Web (Automatic Translation)
 associated-asset-types=Társított tartalomtípusok
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=Kategória navigációs megjelenítési stílus (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=A kategóriákkal, melyek címszavak szerint csoportosíthatóak, jelölhetők meg a különböző tartalmak. Az adminisztrátorok címszavakat hozhatnak létre, ezeket kategóriákkal tölthetik fel, melyekből a felhasználók kiválaszthatják a számukra megfelelőt, amikor egy tartalmat besorolnak valahova.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategóriák
@@ -17,7 +17,7 @@ please-enter-a-unique-property-key=Adj meg egy egyedi tulajdonság kulcsot.
 please-enter-a-valid-property-key=Adj meg egy érvényes tulajdonság kulcsot.
 please-enter-a-valid-property-value=Adj meg egy érvényes tulajdonság értéket.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=A tulajdonságoknál lehetőséged van részletesebb információt megadni egy kategóriáról. Kulcs és érték párok szerint lehet hozzárendelni részletes információkat egy kategóriához.
-select-category=Select Category (Automatic Copy)
+select-category=Válasszon kategóriát (Automatic Translation)
 the-asset-subtype-no-longer-exists=Az eszköz altípus nem létezik többé. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=A kategória {0} és a szülő kategória nem lehet ugyanaz.
 the-vocabulary-could-not-be-found=A szótár nem található.
