--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_pl.properties
@@ -3,11 +3,11 @@ add-new-vocabulary=Dodaj nowy słownik
 add-vocabulary=Dodaj słownik
 all-asset-subtypes=Wszystkie podtypy treści
 all-asset-types=Wszystkie typy treści
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Zezwalaj na spłaszczonych nawigacji (Automatic Translation)
 allow-multiple-categories=Zezwól na stosowanie wielu kategorii
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=Web kategorie aktywów (Automatic Translation)
 associated-asset-types=Powiązane typy treści
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=Styl wyświetlania kategorii nawigacji (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategorie określają grupę terminów słownikowych oznaczających jednostki treści. Administratorzy mogą tworzyć słowniki i zapełniać je kategoriami które mogą być wybierane przez użytkowników podczas tworzenia treści.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategorii (Automatic Translation)
@@ -17,7 +17,7 @@ please-enter-a-unique-property-key=Proszę wprowadzić unikalną Właściwość 
 please-enter-a-valid-property-key=Wprowadź prawidłowy Właściwość klucz. (Automatic Translation)
 please-enter-a-valid-property-value=Podaj wartość prawidłowa właściwość. (Automatic Translation)
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Właściwości jest to sposób aby dodać bardziej szczegółowe informacje do określonej kategorii. Podzielone są na kluczowe pary wartości umożliwiające połączenie szczegółowej informacji z kategorią.
-select-category=Select Category (Automatic Copy)
+select-category=Wybierz kategorię (Automatic Translation)
 the-asset-subtype-no-longer-exists=Podtyp aktywów już nie istnieje. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=Kategoria {0} i kategoria nadrzędna nie mogą być takie same.
 the-vocabulary-could-not-be-found=Nie odnaleziono kategorii.
