--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_sk.properties
@@ -3,11 +3,11 @@ add-new-vocabulary=Pridať slovník
 add-vocabulary=Pridať slovník
 all-asset-subtypes=Všetky typy príspevkov
 all-asset-types=Všetky typy príspevkov
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Umožniť sploštené navigáciu (Automatic Translation)
 allow-multiple-categories=Povoľ viac kategórií
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=Majetok kategórie Web (Automatic Translation)
 associated-asset-types=Pripojený typy príspevkov
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=Kategória navigácia štýl zobrazenia (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategórie popisujú sady pojmov, ktorými sa taguje obsah. Administrátori vytvárajú slovníky a kategórie, ktoré sa využívajú pri vytváraní obsahu.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategórie
@@ -17,7 +17,7 @@ please-enter-a-unique-property-key=Zadajte, prosím, jedinečný kľúč vlastno
 please-enter-a-valid-property-key=Zadajte, prosím, platný kľúč vlastnosti.
 please-enter-a-valid-property-value=Zadajte, prosím, platnú hodnotu vlastnosti.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Vlastnosti slúžia na pridávanie detailných informácií k špecifickej kategórii. Rozdelené sú na páry kľúč-hodnota čo umožňuje priraďovať podrobné informácie ku kategórii.
-select-category=Select Category (Automatic Copy)
+select-category=Vyberte kategóriu (Automatic Translation)
 the-asset-subtype-no-longer-exists=Majetok podtypu už existuje. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=Kategória {0} a rodičovská kategória by nemali byť tie isté.
 the-vocabulary-could-not-be-found=Kategória sa nenašla.
