--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_ar.properties
@@ -3,21 +3,21 @@ add-new-vocabulary=إضافة المفردات
 add-vocabulary=إضافة المفردات
 all-asset-subtypes=كل أنواع الأصول
 all-asset-types=كل أنواع الأصول
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=السماح بالتنقل مسطح (Automatic Translation)
 allow-multiple-categories=السماح بتصنيفات متعددة
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=ويب فئات الأصول (Automatic Translation)
 associated-asset-types=أنواع الأصول المرتبطة
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=فئة الملاحة نمط العرض (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=الفئات تصف مجموعة من المفردات تحكم علامات العناصر المحتوى. يمكن للمسؤولين إنشاء المفردات وملء لهم مع الفئات التي يمكن للمستخدمين اختيار منها في المحتوى المرخص الدخول له.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=فئات (Automatic Translation)
-number-of-categories=Number of Categories (Automatic Copy)
+number-of-categories=عدد الفئات (Automatic Translation)
 one-of-your-associated-asset-types-contains-an-invalid-value.-please-configure-it-again-or-remove-it=أحد أنواع الأصول المرتبطة الخاصة بك تحتوي على قيمة غير صالحة. الرجاء تكوينه مرة أخرى أو إزالته. (Automatic Translation)
 please-enter-a-unique-property-key=الرجاء إدخال مفتاح خاصية فريدة من نوعها. (Automatic Translation)
 please-enter-a-valid-property-key=الرجاء إدخال مفتاح خاصية صالحة. (Automatic Translation)
 please-enter-a-valid-property-value=الرجاء إدخال قيمة خاصية صالحة. (Automatic Translation)
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=الخصائص هي طريقة لإضافة معلومات تفصيلية لتصنيف معين. الخصائص تنقسم إلى أزواج قيم رئيسية تسمح لك بربط المعلومات التفصيلية مع التصنيف.
-select-category=Select Category (Automatic Copy)
+select-category=حدد الفئة (Automatic Translation)
 the-asset-subtype-no-longer-exists=النوع الفرعي الأصل لم يعد موجوداً. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same. (Automatic Copy)
 the-vocabulary-could-not-be-found=لم يتم العثور على التصنيف.
