--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_bg.properties
@@ -1,23 +1,23 @@
 add-new-category=Добавяне на категория
 add-new-vocabulary=Добавяне на речник
 add-vocabulary=Добавяне на речник
-all-asset-subtypes=All Asset Subtypes (Automatic Copy)
-all-asset-types=All Asset Types (Automatic Copy)
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
-allow-multiple-categories=Allow Multiple Categories (Automatic Copy)
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
-associated-asset-types=Associated Asset Types (Automatic Copy)
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+all-asset-subtypes=Всички активи подтипове (Automatic Translation)
+all-asset-types=Всички типове активи (Automatic Translation)
+allow-flattened-navigation=Позволи сплескан навигация (Automatic Translation)
+allow-multiple-categories=Разреши няколко категории (Automatic Translation)
+asset-categories-admin-web-configuration-name=Актив категории Web (Automatic Translation)
+associated-asset-types=Свързан актив типове (Automatic Translation)
+category-navigation-display-style=Категория навигация стил на показване (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Категориите са набор от термини за категоризиране на елементи. Администраторите могат да създават речници и да ги запълват с категории, от които потребителите да избират когато създават съдържание.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Категории (Automatic Translation)
-number-of-categories=Number of Categories (Automatic Copy)
+number-of-categories=Брой на категориите (Automatic Translation)
 one-of-your-associated-asset-types-contains-an-invalid-value.-please-configure-it-again-or-remove-it=Един от вашите свързани актив типове съдържа невалидна стойност. Моля го конфигурирате отново или да го премахнете. (Automatic Translation)
 please-enter-a-unique-property-key=Моля въведете уникален имот ключ. (Automatic Translation)
 please-enter-a-valid-property-key=Моля въведете валидно свойство ключ. (Automatic Translation)
 please-enter-a-valid-property-value=Моля въведете валидно свойство стойност. (Automatic Translation)
-properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Properties are a way to add more detailed information to a specific category. They are separated into key value pairs that allow you to associate detailed information with a category. (Automatic Copy)
-select-category=Select Category (Automatic Copy)
+properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Свойствата са начин за добавяне на по-подробна информация за конкретна категория. Те са разделени по ключова стойност двойки, които ви позволяват да свържете подробна информация с категория. (Automatic Translation)
+select-category=Изберете категория (Automatic Translation)
 the-asset-subtype-no-longer-exists=Подтип на актив вече не съществува. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same. (Automatic Copy)
 the-vocabulary-could-not-be-found=Категорията не може да бъде намерена.
