--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_ca.properties
@@ -3,11 +3,11 @@ add-new-vocabulary=Afegeix vocabulari
 add-vocabulary=Afegeix vocabulari
 all-asset-subtypes=Tots els tipus de continguts
 all-asset-types=Tots els tipus de continguts
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Permetre navegació aplanat (Automatic Translation)
 allow-multiple-categories=Permet múltiples categories
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=Web de Categories d'actius (Automatic Translation)
 associated-asset-types=Tipus de contingut associat
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=L'estil de visualització de navegació categoria (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Les categories descriuen un conjunt de termes d'un vocabulari per tal d'etiquetar els elements que formen un contingut. Els administradors poden crear vocabularis i afegir-hi categories que els usuaris poden utilitzar quan creïn continguts.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Categories
@@ -17,7 +17,7 @@ please-enter-a-unique-property-key=Per favor, introdueixi una clau de propietat 
 please-enter-a-valid-property-key=Per favor, introdueixi una clau de propietat vàlida.
 please-enter-a-valid-property-value=Per favor, introdueixi un valor de propietat vàlid.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Les propietats són una manera d'afegir informació més detallada a una categoria específica. Estan separades per parelles clau-valor que ens permeten associar informació detallada amb una categoria.
-select-category=Select Category (Automatic Copy)
+select-category=Seleccioneu la categoria (Automatic Translation)
 the-asset-subtype-no-longer-exists=El subtipus actius ja no existeix. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=La categoria {0} i la seva categoria pare no han de ser la mateixa.
 the-vocabulary-could-not-be-found=No s'ha trobat la categoria.
