--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_cs.properties
@@ -3,21 +3,21 @@ add-new-vocabulary=Přidat slovník
 add-vocabulary=Přidat slovník
 all-asset-subtypes=Všechny typy položek
 all-asset-types=Všechny typy položek
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Sloučený navigaci (Automatic Translation)
 allow-multiple-categories=Povolit více kategorií
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=Webová kategorie aktiv (Automatic Translation)
 associated-asset-types=Připojené typy položek
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=Styl zobrazení navigační kategorie (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategorie obsahují množinu slovíček k označkování položek. Správci mohou vytvářet slovníky a plnit je kategoriemi, ze kterých si mohou uživatelé volit při tvorbě obsahu.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategorie (Automatic Translation)
-number-of-categories=Number of Categories (Automatic Copy)
+number-of-categories=Počet kategorií (Automatic Translation)
 one-of-your-associated-asset-types-contains-an-invalid-value.-please-configure-it-again-or-remove-it=Jeden z typů souborům majetku obsahuje neplatnou hodnotu. Prosím znovu nakonfigurovat nebo odebrat. (Automatic Translation)
 please-enter-a-unique-property-key=Zadejte vlastnost jedinečný klíč. (Automatic Translation)
 please-enter-a-valid-property-key=Zadejte prosím platnou vlastnost klíč. (Automatic Translation)
 please-enter-a-valid-property-value=Zadejte platnou hodnotu vlastnosti. (Automatic Translation)
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Vlastnosti slouží k přidávání detailních informací specifické kategorii. Vždy sestávají z klíče a hodnoty, což umožňuje ke kategoriím přiřazovat detailnější informace.
-select-category=Select Category (Automatic Copy)
+select-category=Vybrat kategorii (Automatic Translation)
 the-asset-subtype-no-longer-exists=Aktiv podtypu již neexistuje. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same. (Automatic Copy)
 the-vocabulary-could-not-be-found=Kategorie nebyla nalezena.
