--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_es.properties
@@ -3,11 +3,11 @@ add-new-vocabulary=Añadir vocabulario
 add-vocabulary=Añadir vocabulario
 all-asset-subtypes=Todos los tipos de contenido
 all-asset-types=Todos los tipos de contenido
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Permiten la navegación aplanado (Automatic Translation)
 allow-multiple-categories=Permitir Múltiples Categorías
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=Web de categorías de activos (Automatic Translation)
 associated-asset-types=Asignar tipos de contenidos
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=Estilo de visualización de navegación de categoría (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Las categorías representan términos de un vocabulario que se pueden utilizar para clasificar elementos. Un administrador puede crear vocabularios y agregarles categorías que los usuarios podrán utilizar para clasificar los contenidos.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Categorías
@@ -17,7 +17,7 @@ please-enter-a-unique-property-key=Por favor, introduzca una clave de propiedad 
 please-enter-a-valid-property-key=Por favor, introduzca una clave de propiedad válida.
 please-enter-a-valid-property-value=Por favor, introduzca un valor de propiedad válido.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Las propiedades son una manera de agregar información más detallada a una categoría. Consisten en una clave y un valor que nos permiten asociar información detallada a la categoría.
-select-category=Select Category (Automatic Copy)
+select-category=Seleccione categoría (Automatic Translation)
 the-asset-subtype-no-longer-exists=El subtipo activo ya no existe. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=La categoría {0} y categoría matriz no deben ser la misma.
 the-vocabulary-could-not-be-found=La categoría no ha sido encontrada.
