--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_fa.properties
@@ -3,11 +3,11 @@ add-new-vocabulary=افزودن فهرست اسامی
 add-vocabulary=افزودن واژگان
 all-asset-subtypes=تمام زیرنوع‌های منابع
 all-asset-types=تمام انواع منابع
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=اجازه در پیمایش پهن (Automatic Translation)
 allow-multiple-categories=اجازه دسترسی به گروه‌های چندگانه
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=دارایی ردههای صفحه وب (Automatic Translation)
 associated-asset-types=انواع منابع مرتبط
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=رده ناوبری سبک نمایش (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=گروه‌بندی‌ها شامل مجموعه‌ای از واژه‌ها برای مشخص کردن محتوا می‌باشند. مدیران می‌توانند واژه‌های جدید را تولید کنند و به گروه‌بندی‌های مختلف نسبت دهند. تولیدکنندگان محتوای سایت‌ها از این گروه‌بندی‌ها استفاده می‌نمایند.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=گروه‌بندی
@@ -17,7 +17,7 @@ please-enter-a-unique-property-key=لطفا یک کلید یکتا کلیک نم
 please-enter-a-valid-property-key=لطفا یک کلید خاص معتبر وارد نمایید.
 please-enter-a-valid-property-value=لطفا یک مقدار خاص معتبر وارد نمایید.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=خصوصیات راهی برای افزودن اطلاعات بیشتر به یک گروه خاص است.
-select-category=Select Category (Automatic Copy)
+select-category=انتخاب رده (Automatic Translation)
 the-asset-subtype-no-longer-exists=نوع دوم دارایی دیگر وجود دارد. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=طبقه بندی {0} و طبقه بندی والد نباید یکسان باشند.
 the-vocabulary-could-not-be-found=واژه يافت نشد.
