--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_in.properties
@@ -3,21 +3,21 @@ add-new-vocabulary=menambahkan kosa kata
 add-vocabulary=Tambah Kosa Kata
 all-asset-subtypes=Semua Jenis Aset
 all-asset-types=Semua Jenis Aset
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Memungkinkan rata navigasi (Automatic Translation)
 allow-multiple-categories=Izinkan Beberapa Kategori
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
-associated-asset-types=Associated Asset Types (Automatic Copy)
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+asset-categories-admin-web-configuration-name=Web kategori aset (Automatic Translation)
+associated-asset-types=Jenis aset terkait (Automatic Translation)
+category-navigation-display-style=Kategori navigasi menampilkan gaya (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategori menggambarkan sekumpulan istilah kosakata untuk menandai item konten. Administrator dapat membuat kosa kata dan mengisi mereka dengan kategori yang dapat dipilih saat approve suatu konten
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategori (Automatic Translation)
-number-of-categories=Number of Categories (Automatic Copy)
+number-of-categories=Jumlah kategori (Automatic Translation)
 one-of-your-associated-asset-types-contains-an-invalid-value.-please-configure-it-again-or-remove-it=Salah satu jenis aset terkait Anda berisi nilai yang salah. Silakan mengkonfigurasi lagi atau menghapusnya. (Automatic Translation)
 please-enter-a-unique-property-key=Masukkan kunci unik properti. (Automatic Translation)
 please-enter-a-valid-property-key=Masukkan kunci berlaku properti. (Automatic Translation)
 please-enter-a-valid-property-value=Masukkan nilai yang sah properti. (Automatic Translation)
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Properti adalah cara untuk menambahkan informasi lebih rinci untuk kategori tertentu. Mereka dipisahkan menjadi pasangan nilai kunci yang memungkinkan Anda untuk menghubungkan informasi rinci dengan kategori.
-select-category=Select Category (Automatic Copy)
+select-category=Pilih kategori (Automatic Translation)
 the-asset-subtype-no-longer-exists=Subtipe aset tidak ada lagi. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same. (Automatic Copy)
 the-vocabulary-could-not-be-found=Kategori ini tidak dapat ditemukan.
