--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_it.properties
@@ -3,11 +3,11 @@ add-new-vocabulary=Aggiungi Vocabolario
 add-vocabulary=Aggiungi Vocabolario
 all-asset-subtypes=Tutti i tipi di Sotto Risorse
 all-asset-types=Tutti i tipi di Risorse
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Consentire la navigazione appiattito (Automatic Translation)
 allow-multiple-categories=Consenti Categorie Multiple
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=Web di categorie di attività (Automatic Translation)
 associated-asset-types=Associa i Tipi di Risorsa
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=Stile di visualizzazione di navigazione categoria (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Le Categorie descrivono un insieme di termini da associare ai contenuti. Gli amministratori possono creare vocabolari e popolarli con categorie che gli utenti possono utilizzare durante la creazione dei contenuti.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Categorie
@@ -17,7 +17,7 @@ please-enter-a-unique-property-key=Inserire una chiave di proprietà univoca.
 please-enter-a-valid-property-key=Inserisci una chiave di proprietà valida.
 please-enter-a-valid-property-value=Inserisci un valore di proprietà valido.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Le proprietà sono un modo di aggiungere informazioni dettagliate a una categoria specifica. Sono separate in coppie di chiavi e valori che ti consentono di associare informazioni dettagliate a una categoria.
-select-category=Select Category (Automatic Copy)
+select-category=Seleziona categoria (Automatic Translation)
 the-asset-subtype-no-longer-exists=Il sottotipo di asset non esiste più. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=La categoria {0} e la categoria padre non possono essere la stessa.
 the-vocabulary-could-not-be-found=Vocabolario non trovato.
