--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_iw.properties
@@ -3,11 +3,11 @@ add-new-vocabulary=הוסף אוצר מילים
 add-vocabulary=הוסף אוצר מילים
 all-asset-subtypes=כל סוגי הנכסים
 all-asset-types=כל סוגי הנכסים
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=לאפשר ניווט שעברו שיטוח (Automatic Translation)
 allow-multiple-categories=הרשה קטגוריות מרובות
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=הנכס בקטגוריות אינטרנט (Automatic Translation)
 associated-asset-types=סוגי נכסים מקושרים
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=סגנון התצוגה קטגוריה ניווט (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=קטגוריות מתארות מערך של מונחים מילוליים לתיוג של פריטי תוכן. מנהלים יכולים ליצור אוצר מילים ולהוסיף להם קטגוריות מהן משתמשים יכולים לבחור כאשר הם מאשרים תוכן.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=קטגוריות
@@ -17,7 +17,7 @@ please-enter-a-unique-property-key=הזינו קוד נכס ייחודי.
 please-enter-a-valid-property-key=הזינו קוד נכס תקין.
 please-enter-a-valid-property-value=הזינו ערך נכס תקין.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=תכונות הן אמצעי להוספת מידע מפורט יותר אודות קטגוריה מסוימת. הן מחולקות לזוגות ערכי מפתח המאפשרים לך לחבר מידע מפורט עם קטגוריה.
-select-category=Select Category (Automatic Copy)
+select-category=בחר קטגוריה (Automatic Translation)
 the-asset-subtype-no-longer-exists=המשנה הנכס קיים עוד. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=הקטגוריה {0} וקטגוריית האב לא אמורים להיות זהים.
 the-vocabulary-could-not-be-found=הקטגוריה לא נמצאה
