--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_nb.properties
@@ -3,11 +3,11 @@ add-new-vocabulary=Legg til ordliste
 add-vocabulary=Legg til ordliste
 all-asset-subtypes=Alle ressurstyper
 all-asset-types=Alle ressurstyper
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Tillate flat navigering (Automatic Translation)
 allow-multiple-categories=Tillat flere kategorier
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=Aktiva kategorier Web (Automatic Translation)
 associated-asset-types=Assosiert ressurstyper
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=Kategorien navigasjon visningsstilen (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategorier definerer en ontologi, dvs et sett med forhåndsdefinerte termer som kan knyttes til ulike innlegg i portalen. Administratorer kan definere en eller flere ordlister og fylle dem med kategorier som brukerne kan benytte når de arbeider med innhold.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategorier
@@ -17,7 +17,7 @@ please-enter-a-unique-property-key=Vennligst angi en unik innstillingsnøkkel.
 please-enter-a-valid-property-key=Vennligst angi en gyldig innstillingsnøkkel.
 please-enter-a-valid-property-value=Vennligst angi en gyldig innstillingsnøkkel.
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Egenskaper er til for å gi mer informasjon om en spesifik kategori. De er delt opp i nøkkel-verdi-par.
-select-category=Select Category (Automatic Copy)
+select-category=Velg kategori (Automatic Translation)
 the-asset-subtype-no-longer-exists=Aktiva undertypen finnes ikke lenger. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=Kategorien {0} og overordnet kategori bør ikke være like.
 the-vocabulary-could-not-be-found=Kategorien ble ikke funnet.
