--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_ro.properties
@@ -1,23 +1,23 @@
 add-new-category=Adaugă categorie
 add-new-vocabulary=Adaugă Vocabular
 add-vocabulary=Adaugă Vocabular
-all-asset-subtypes=All Asset Subtypes (Automatic Copy)
-all-asset-types=All Asset Types (Automatic Copy)
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
-allow-multiple-categories=Allow Multiple Categories (Automatic Copy)
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
-associated-asset-types=Associated Asset Types (Automatic Copy)
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+all-asset-subtypes=Toate subtipurile de mijloc (Automatic Translation)
+all-asset-types=Toate tipurile de active (Automatic Translation)
+allow-flattened-navigation=Permite aplatizate de navigare (Automatic Translation)
+allow-multiple-categories=Permite mai multe categorii (Automatic Translation)
+asset-categories-admin-web-configuration-name=Active categorii Web (Automatic Translation)
+associated-asset-types=Tipuri de active asociate (Automatic Translation)
+category-navigation-display-style=Stilul de afişare categorie de navigare (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Categoriile descriu un set de termeni de vocabular folosite pentru a eticheta conținutul însuși. Administratorul poate crea vocabulare pe care să le populeze cu categorii din care utilizatorii pot alege când crează conținut.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Categorii (Automatic Translation)
-number-of-categories=Number of Categories (Automatic Copy)
+number-of-categories=Număr de categorii (Automatic Translation)
 one-of-your-associated-asset-types-contains-an-invalid-value.-please-configure-it-again-or-remove-it=Unul dintre tipurile de asociate activului conţine o valoare nevalidă. Vă rugăm să configuraţi-l din nou, sau scoateţi-l. (Automatic Translation)
 please-enter-a-unique-property-key=Vă rugăm să introduceţi o cheie de proprietate unică. (Automatic Translation)
 please-enter-a-valid-property-key=Vă rugăm să introduceţi o cheie de proprietate validă. (Automatic Translation)
 please-enter-a-valid-property-value=Introduceți o valoare de proprietate validă. (Automatic Translation)
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Proprietatile sunt o metoda de a adauga mai multe informatii detaliate a o categorie specifica. Ele sunt separate in valori cheie care iti permit sa asocieze informatii detaliate cu o categorie.
-select-category=Select Category (Automatic Copy)
+select-category=Selectati categoria (Automatic Translation)
 the-asset-subtype-no-longer-exists=Subtip de mijloc nu mai exista. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same. (Automatic Copy)
 the-vocabulary-could-not-be-found=Categoria nu a putut fi gasita.
