--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_ru.properties
@@ -3,21 +3,21 @@ add-new-vocabulary=Добавить словарь
 add-vocabulary=Добавить словарь
 all-asset-subtypes=Все типы материалов
 all-asset-types=Все типы материалов
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Разрешить уплощенных навигации (Automatic Translation)
 allow-multiple-categories=Позволять несколько категорий
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=Веб категории активов (Automatic Translation)
 associated-asset-types=Связанные типы ресурсов
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=Стиль отображения категории навигации (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Категории описывают наборы словарных терминов, которыми можно помечать элементы контента. Администраторы могут создавать словари и наполнять их категориями, которые пользователи смогут выбирать при создании контента.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Категории (Automatic Translation)
-number-of-categories=Number of Categories (Automatic Copy)
+number-of-categories=Количество категорий (Automatic Translation)
 one-of-your-associated-asset-types-contains-an-invalid-value.-please-configure-it-again-or-remove-it=Один из ваших типов связанных Актив содержит недопустимое значение. Пожалуйста, настроить его снова, или удалить его. (Automatic Translation)
 please-enter-a-unique-property-key=Пожалуйста, введите ключ уникальные свойства. (Automatic Translation)
 please-enter-a-valid-property-key=Пожалуйста, введите допустимое свойство ключа. (Automatic Translation)
 please-enter-a-valid-property-value=Пожалуйста, введите значение свойства valid. (Automatic Translation)
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Свойства позволяют добавить больше детальной информации выбранной категории. Они разделены на пары ключ-значение, что позволяет связывать детальную информацию с категорией.
-select-category=Select Category (Automatic Copy)
+select-category=Выберите категорию (Automatic Translation)
 the-asset-subtype-no-longer-exists=Подтип активов больше не существует. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same. (Automatic Copy)
 the-vocabulary-could-not-be-found=Категория не найдена.
