--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_sl.properties
@@ -1,23 +1,23 @@
 add-new-category=Dodaj kategorijo
 add-new-vocabulary=Dodaj slovar
 add-vocabulary=Dodaj slovar
-all-asset-subtypes=All Asset Subtypes (Automatic Copy)
-all-asset-types=All Asset Types (Automatic Copy)
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
-allow-multiple-categories=Allow Multiple Categories (Automatic Copy)
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
-associated-asset-types=Associated Asset Types (Automatic Copy)
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+all-asset-subtypes=Vse sredstva podtipe (Automatic Translation)
+all-asset-types=Vse vrste sredstev (Automatic Translation)
+allow-flattened-navigation=Omogočajo sploščene navigacijo (Automatic Translation)
+allow-multiple-categories=Dovoli več kategorij (Automatic Translation)
+asset-categories-admin-web-configuration-name=Sredstva kategorije spletne (Automatic Translation)
+associated-asset-types=Povezana sredstva vrste (Automatic Translation)
+category-navigation-display-style=Slog prikaza kategorije navigacijo (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
-javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Categories describe a set of vocabulary terms to tag content items. Administrators can create vocabularies and populate them with categories that users can choose from when authoring content. (Automatic Copy)
+javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategorije opisati nabor besednjak izrazov za oznako vsebine predmetov. Skrbniki lahko ustvarite slovarjih in jih napolnite s kategorijami, ki lahko uporabniki izbirajo med načrtovanjem vsebin. (Automatic Translation)
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategorije (Automatic Translation)
-number-of-categories=Number of Categories (Automatic Copy)
+number-of-categories=Število kategorij (Automatic Translation)
 one-of-your-associated-asset-types-contains-an-invalid-value.-please-configure-it-again-or-remove-it=Povezana sredstva vrste vsebuje neveljavno vrednost. Prosim oblikovati znova ali ga odstranite. (Automatic Translation)
 please-enter-a-unique-property-key=Vnesite ključ edinstven lastnost. (Automatic Translation)
 please-enter-a-valid-property-key=Prosimo, Vnesite veljaven lastnost ključ. (Automatic Translation)
 please-enter-a-valid-property-value=Vnesite veljaven lastnost vrednost. (Automatic Translation)
-properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Properties are a way to add more detailed information to a specific category. They are separated into key value pairs that allow you to associate detailed information with a category. (Automatic Copy)
-select-category=Select Category (Automatic Copy)
+properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Lastnosti so način, da dodate več podrobnih informacij za določeno kategorijo. So ločeni v zakleniti vrednost parov, ki vam omogočajo, da sodelavec podrobne informacije s kategorijo. (Automatic Translation)
+select-category=Izberite kategorijo (Automatic Translation)
 the-asset-subtype-no-longer-exists=Podtip sredstvo ne obstaja. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same. (Automatic Copy)
 the-vocabulary-could-not-be-found=Kategorije ni moč najti.
