--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_th.properties
@@ -3,11 +3,11 @@ add-new-vocabulary=เพิ่มคำศัพท์ใหม่ (Automatic T
 add-vocabulary=เพิ่มคำศัพท์ (Automatic Translation)
 all-asset-subtypes=ประเภทย่อยของสินทรัพย์ทั้งหมด (Automatic Translation)
 all-asset-types=ชนิดสินทรัพย์ทั้งหมด (Automatic Translation)
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=นำแบน (Automatic Translation)
 allow-multiple-categories=อนุญาตให้มีหลายประเภท (Automatic Translation)
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=เว็บประเภทสินทรัพย์ (Automatic Translation)
 associated-asset-types=ชนิดของสินทรัพย์ที่เกี่ยวข้อง (Automatic Translation)
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=ลักษณะประเภทนำแสดง (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=ประเภทอธิบายชุดคำศัพท์เงื่อนไขการแท็กเนื้อหารายการ ผู้ดูแลระบบสามารถสร้างศัพท์ และรวบรวมพวกเขา ด้วยประเภทที่ผู้ใช้สามารถเลือกเมื่อเขียนเนื้อหา (Automatic Translation)
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=หมวดหมู่ (Automatic Translation)
@@ -17,7 +17,7 @@ please-enter-a-unique-property-key=โปรดป้อนหมายเลข
 please-enter-a-valid-property-key=กรุณาใส่หมายเลขถูกต้องคุณสมบัติ (Automatic Translation)
 please-enter-a-valid-property-value=โปรดป้อนค่าคุณสมบัติที่ถูกต้อง (Automatic Translation)
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=วิธีการเพิ่มเติมข้อมูลประเภทเฉพาะแห่ง พวกเขาจะแบ่งเป็นคู่ค่าคีย์ที่ช่วยให้คุณสามารถเชื่อมโยงข้อมูลรายละเอียดกับประเภท (Automatic Translation)
-select-category=Select Category (Automatic Copy)
+select-category=เลือกประเภท (Automatic Translation)
 the-asset-subtype-no-longer-exists=ชนิดย่อยของสินทรัพย์ที่ไม่มีอยู่ (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same. (Automatic Copy)
 the-vocabulary-could-not-be-found=ไม่พบคำศัพท์ (Automatic Translation)
