--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_tr.properties
@@ -1,23 +1,23 @@
 add-new-category=Kategori Ekle
 add-new-vocabulary=Sözcük Dağarcığı Ekle
 add-vocabulary=Sözlük Ekle
-all-asset-subtypes=All Asset Subtypes (Automatic Copy)
-all-asset-types=All Asset Types (Automatic Copy)
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
-allow-multiple-categories=Allow Multiple Categories (Automatic Copy)
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
-associated-asset-types=Associated Asset Types (Automatic Copy)
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+all-asset-subtypes=Tüm kıymet alt türlerinden (Automatic Translation)
+all-asset-types=Bütün varlık türleri (Automatic Translation)
+allow-flattened-navigation=Düzleştirilmiş gezinti izin (Automatic Translation)
+allow-multiple-categories=Birden çok kategoride izin (Automatic Translation)
+asset-categories-admin-web-configuration-name=Kıymet Kategoriler Web (Automatic Translation)
+associated-asset-types=İlişkilendirilmiş varlık türleri (Automatic Translation)
+category-navigation-display-style=Kategori navigasyon görüntüleme stili (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
-javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Categories describe a set of vocabulary terms to tag content items. Administrators can create vocabularies and populate them with categories that users can choose from when authoring content. (Automatic Copy)
+javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategoriler içerik öğelerini etiketleme için kelime terim kümesi açıklar. Yöneticiler terimlerini oluşturabilir ve bunları kullanıcıların, içerik yazarken aralarından seçim kategoriler ile doldurabilirsiniz. (Automatic Translation)
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Kategoriler (Automatic Translation)
-number-of-categories=Number of Categories (Automatic Copy)
+number-of-categories=Kategori Sayısı (Automatic Translation)
 one-of-your-associated-asset-types-contains-an-invalid-value.-please-configure-it-again-or-remove-it=Senin ilişkili varlık türlerinden biri geçersiz bir değer içeriyor. Lütfen yeniden yapılandırmanız veya kaldırabilirsiniz. (Automatic Translation)
 please-enter-a-unique-property-key=Lütfen benzersiz özellik anahtarını girin. (Automatic Translation)
 please-enter-a-valid-property-key=Lütfen geçerli özelliği anahtarını girin. (Automatic Translation)
 please-enter-a-valid-property-value=Lütfen geçerli özelliği değeri girin. (Automatic Translation)
-properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Properties are a way to add more detailed information to a specific category. They are separated into key value pairs that allow you to associate detailed information with a category. (Automatic Copy)
-select-category=Select Category (Automatic Copy)
+properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Özellikleri belirli bir kategoriye daha ayrıntılı bilgi eklemek için bir yoldur. Onlar ayrıntılı bilgi bir kategoriyle ilişkilendirmek izin anahtar değer çiftleri halinde ayrılır. (Automatic Translation)
+select-category=Kategori seçin (Automatic Translation)
 the-asset-subtype-no-longer-exists=Kıymet alt türü artık yok. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same. (Automatic Copy)
 the-vocabulary-could-not-be-found=Kategori bulunamadı.
