--- a/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/web-experience/asset/asset-categories-admin-web/src/main/resources/content/Language_vi.properties
@@ -3,21 +3,21 @@ add-new-vocabulary=Thêm từ điển mới
 add-vocabulary=Thêm từ điển
 all-asset-subtypes=Tất cả các phân loại tài sản
 all-asset-types=Tất cả các loại tài sản (asset )
-allow-flattened-navigation=Allow Flattened Navigation (Automatic Copy)
+allow-flattened-navigation=Cho phép chuyển hướng phẳng (Automatic Translation)
 allow-multiple-categories=Cho phép nhiều chủng loại (category)
-asset-categories-admin-web-configuration-name=Asset Categories Web (Automatic Copy)
+asset-categories-admin-web-configuration-name=Tài sản thể loại Web (Automatic Translation)
 associated-asset-types=Các loại tài sản kết hợp
-category-navigation-display-style=Category Navigation Display Style (Automatic Copy)
+category-navigation-display-style=Danh mục menu Hiển thị theo phong cách (Automatic Translation)
 flatten-x=Flatten ({0}) (Automatic Copy)
 javax.portlet.description.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=<Chuyên mục> là tập hợp các từ điển để đánh dấu các nội dung thông tin. Quản trị viên có thể tạo các từ vựng và phổ biến với các chuyên đề, theo đó người sử dụng có thể chọn khi sau khi đã được xác thực quyền truy cập.
 javax.portlet.title.com_liferay_asset_categories_admin_web_portlet_AssetCategoriesAdminPortlet=Thể loại (Automatic Translation)
-number-of-categories=Number of Categories (Automatic Copy)
+number-of-categories=Số lượng các loại (Automatic Translation)
 one-of-your-associated-asset-types-contains-an-invalid-value.-please-configure-it-again-or-remove-it=Một trong các loại tài sản liên quan của bạn có chứa một giá trị không hợp lệ. Hãy cấu hình nó một lần nữa hoặc loại bỏ nó. (Automatic Translation)
 please-enter-a-unique-property-key=Vui lòng nhập một phím bất động sản độc đáo. (Automatic Translation)
 please-enter-a-valid-property-key=Vui lòng nhập một chìa khóa hợp lệ bất động sản. (Automatic Translation)
 please-enter-a-valid-property-value=Vui lòng nhập một giá trị hợp lệ. (Automatic Translation)
 properties-are-a-way-to-add-more-detailed-information-to-a-specific-category=Các thuộc tính là cách thêm vào các thông tin chi tiết cho một chuyên đề. Thuộc tính được cấu trúc ở dạng Khóa - Giá trị cho phép bạn nhập thêm thông tin chi tiết cho các chuyên đề này.
-select-category=Select Category (Automatic Copy)
+select-category=Chọn danh mục (Automatic Translation)
 the-asset-subtype-no-longer-exists=Phiên bản tài sản không còn tồn tại. (Automatic Translation)
 the-category-x-and-parent-category-should-not-be-the-same=The category {0} and parent category should not be the same. (Automatic Copy)
 the-vocabulary-could-not-be-found=Chuyên mục không tìm thấy.
